Revision history for Encode-Wechsler

0.02

0.01
    - First version, released on an unsuspecting world.